examples/fail/parser/bad_let_decl.bina
// EXPECT_PARSER_ERROR: expected variable name
fn main() -> int {
    let : int32 = 1;
    return 0;
}
